demo/demo-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-deploy
  namespace: demo    
  
  labels:
    app: demo
    
   
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      
      labels:
        app: demo     
      

    spec:
      containers:
        - name: demo
          image: saturn203/demo-app
          ports:
          - name: http
            containerPort: 8080
