demo/demo-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ing
  namespace: demo
spec:
  ingressClassName: nginx
  rules:
  - host: "demo.3.36.37.127.sslip.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo-svc
            port:
              number: 8080
